--- a/index.html
+++ b/index.html
@@ -55,56 +55,59 @@
                 <div class="brand img1">
                     <div class="head1">
                         <br><br>
-                        <a href="#"><p>-Lounges</p></a>
-                        <a href="#"><p>-BedRooms</p></a>
-                        <a href="#"><p>-Children Bedrooms</p></a>
+                        <a href="#"><p>Lounges</p></a>
+                        <a href="#"><p>BedRooms</p></a>
+                        <a href="#"><p>Children Bedrooms</p></a>
+                        <a href="#"><p>Children</p></a>
                     </div>
                     <div class="head2"><h3>Furniture</h3></div>
                 </div>
                 <div class="brand img2">
                     <div class="head1">
                         <br><br>
-                        <a href="#"><p>-Men Clothes</p></a>
-                        <a href="#"><p>-Women Clothes</p></a>
-                        <a href="#"><p>-Children Accessories</p></a>
-                        <a href="#"><p>-XXXL Clothes</p></a>
-                        <a href="#"><p>-Underwear</p></a>
-                        <a href="#"><p>-More Clothes</p></a>
+                        <a href="#"><p>Men Clothes</p></a>
+                        <a href="#"><p>Women Clothes</p></a>
+                        <a href="#"><p>Children Accessories</p></a>
+                        <a href="#"><p>XXL Clothes</p></a>
+                        <a href="#"><p>XXXL Clothes</p></a>
+                        <a href="#"><p>Underwear</p></a>
+                        <a href="#"><p>More Clothes</p></a>
                     </div>
                     <div class="head2"><h3>Clothes</h3></div>
                 </div>
                 <div class="brand img3">
                     <div class="head1">
                         <br><br>
-                        <a href="#"><p>-Phone accessories</p></a>
-                        <a href="#"><p>-Computer accessories</p></a>
-                        <a href="#"><p>-Car accessories</p></a>
-                        <a href="#"><p>-Children Accessories</p></a>
-                        <a href="#"><p>-Smart watches</p></a>
-                        <a href="#"><p>-More Accessories</p></a>
+                        <a href="#"><p>Phone accessories</p></a>
+                        <a href="#"><p>Computer accessories</p></a>
+                        <a href="#"><p>Car accessories</p></a>
+                        <a href="#"><p>Children Accessories</p></a>
+                        <a href="#"><p>Smart watches</p></a>
+                        <a href="#"><p>More Accessories</p></a>
                     </div>
                     <div class="head2"><h3>Accessories</h3></div>
                 </div>
                 <div class="brand img4">
                     <div class="head1">
                         <br><br>
-                        <a href="#"><p>-PlayStations</p></a>
-                        <a href="#"><p>-Video Games</p></a>
-                        <a href="#"><p>-CD Games</p></a>
-                        <a href="#"><p>-Kids Games</p></a>
-                        <a href="#"><p>-More Games</p></a>
+                        <a href="#"><p>PlayStations</p></a>
+                        <a href="#"><p>Video Games</p></a>
+                        <a href="#"><p>CD Games</p></a>
+                        <a href="#"><p>Games</p></a>
+                        <a href="#"><p>Kids Games</p></a>
+                        <a href="#"><p>More Games</p></a>
                     </div>
                     <div class="head2"><h3>Games</h3></div>
                 </div>
                 <div class="brand img5">
                     <div class="head1">
                         <br><br>
-                        <a href="#"><p>-Kitchen Devices</p></a>
-                        <a href="#"><p>-Medical Devices</p></a>
-                        <a href="#"><p>-Mobile Phones</p></a>
-                        <a href="#"><p>-Laptops</p></a>
-                        <a href="#"><p>-Computers</p></a>
-                        <a href="#"><p>-More Devices</p></a>
+                        <a href="#"><p>Kitchen Devices</p></a>
+                        <a href="#"><p>Medical Devices</p></a>
+                        <a href="#"><p>Mobile Phones</p></a>
+                        <a href="#"><p>Laptops</p></a>
+                        <a href="#"><p>Computers</p></a>
+                        <a href="#"><p>More Devices</p></a>
                     </div>
                     <div class="head2"><h3>Devices</h3></div>
                 </div>
