--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                             <div class="shop"><a href="#ShoppingCart"><i class="sh2 fas fa-dolly"></i></a></div>
                             <div class="more"><a href="#Home"><i class="sh2 fas fa-search fa-rotate-90"></i></a></div>
                         </div>
-                        <div class="typ e2"><h2>Furniture<br>Offices</h2></div>
+                        <div class="typ e2"><h2>Furniture<br>Officees</h2></div>
                     </div>
                     <div class="card s5 img3">
                         <div class="nombe r3"><div class="nomber">03</div><div class="nam e3">Treadmill</div></div>
